# qq-channel

./: .gitignore  README.md  README_zh.md  install.py  pyproject.toml
src/qq_channel/: __init__.py  api.py  config.py  gateway.py  inbound_attachments.py  message_queue.py  outbound.py  outbound_deliver.py  reply_dispatcher.py  session_store.py  types.py  utils.py
tests/: conftest.py  test_qq_channel.py
