[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-qq-channel"
version = "0.1.0"
description = "QQ Open Platform adapter for Hermes Agent — WebSocket long-connection gateway"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hermes Agent Contributors" }]
license = { text = "MIT" }
dependencies = [
    "websockets>=15.0.0,<16",
    "httpx>=0.28.0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10",
    "pytest-asyncio>=1.0.0,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
